# rust-forum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  Dockerfile.static  README.md  devsetup.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  lint.sh  migration_generate.sh  setupdev.sh  start.sh  template.env  test.sh  watch.sh
.github/workflows/: build-and-push-image.yml  playwright-test.yml  playwright-test.yml.bak
migrations/2024-12-16-141219_create_posts/: up.sql
migrations/2024-12-18-083650_create_comments/: up.sql
migrations/2024-12-19-142257_create_users/: up.sql
migrations/2025-01-01-180724_add_user_profile_picture_url/: down.sql  up.sql
migrations/2025-01-10-055744_add_users_role/: down.sql  up.sql
migrations/2025-01-14-095159_create_password_resets/: down.sql  up.sql
queryroute/: mod.rs
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src/comments/: crud.rs  dto.rs  mod.rs  repository.rs  routes.rs  types.rs
src/controllers/: comment_controller.rs  mod.rs  post_controller.rs  profile_controller.rs  user_controller.rs
src/entities/: comment.rs  post.rs  user.rs
src/errors/: mod.rs  turnstile.rs
src/handlebars_helper/: mod.rs  pagination.rs  turnstile.rs
src/macros/: mod.rs  turnstile_macro.rs
src/posts/: crud.rs  dto.rs  mod.rs  (+3 more)
templates/: base.hbs  index.hbs  pagination.hbs  pagination_snippet.hbs
tests/: codegen-test.sh  debug-test.sh  devsetup.sh  package.json  playwright.config.ts  pnpm-lock.yaml  run-test-headed.sh  run-test.sh  show-report.sh  test.sh
(+64 files in other folders)
