[package]
name = "rust-forum"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
handlebars = { version = "6.2.0", features = ["dir_source"] }
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.5"
bcrypt = "0.16.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-cors = "0.7.0"
actix-limitation = "0.5"
actix-multipart = "0.7.2"
# futures-util = "0.3"
actix-files = "0.6.6"
futures = "0.3"
rand = "0.8.5"
lettre = "0.11.11"
diesel_migrations = "2.2.0"

[[bin]]
name = "rustforum"
path = "src/main.rs"
# doc = false

# [lib]
# doc = false
